syntax="proto3";

package usertagpost_service.v1;

option go_package = ".;v1";

import "google/api/annotations.proto";

message UserTagPost {
  int64 id = 1;
  int64 user_id = 2;
  int64 tag_id = 3;
  int64 post_id = 4;
}

message CreateRequest {
  int64 id = 1;
  string name = 2;
  UserTagPost user_tag_post = 3;
}

message CreateResponse {
  int64 added = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResponse {
  int64 deleted = 1;
}

message PostListRequest {
  int64 id = 1;
  string name = 2;
}

message PostListResponse {

}

service UserTagPostService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/user/{name}/tag-post"
      body: "*"
    };
  }

  rpc Delete(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      delete: "/v1/user/{name}/tag-post/{id}"
    };
  }


  rpc PostList(PostListRequest) returns (PostListResponse) {
    option (google.api.http) = {
      get: "/v1/user/{name}/tag/{id}/post"
    };
  }
}